support realm time event